jss-compiler/tests/semantic_errors/invalid_input_type.jss
function void main() {
    let bool b;
    input(b);
}
